# gm_f_uk

./: README.md  admin.html  bubble.html  index.html  pyproject.toml  quiz.html
css/: style.css
data/: bubble_data.json  klimatkollen.json  nvv_kommun_co2.json  quiz.json  scb_dimensions.json  sources.json
docs/superpowers/specs/: 2026-03-20-utokat-bubbeldiagram-design.md
js/: admin.js  bubble-chart.js  nav.js  quiz.js
scripts/: convert_excel.py  fetch_klimatkollen.py  fetch_nvv.py  fetch_scb.py  fetch_scb_dimensions.py  generate_demo_data.py  merge_bubble_data.py
tests/: test_convert_excel.py  test_fetch_klimatkollen.py  test_fetch_nvv.py  test_fetch_scb.py  test_fetch_scb_dimensions.py  test_merge_bubble_data.py
